# mcp_agent_dev_kit

./: .env  README.md  main.py  pyproject.toml  requirements.txt
app/: .env  agent.py
app/.adk/: session.db
src/api/: auth.py  main.py  models.py
src/mcp/: create_db.py  server.py
src/mcp/db/: banking.db
src/mcp/src/mcp/db/: banking.db
src/rag/: create_vector_db.py  extract_products.py  product_knowledge.py
src/rag/products/: products.json
src/rag/products/chroma_db/: chroma.sqlite3
